--- a/PeopleDatabase/PeopleDatabase.csproj
+++ b/PeopleDatabase/PeopleDatabase.csproj
@@ -3,7 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>People_database</RootNamespace>
+        <RootNamespace>PeopleDatabase</RootNamespace>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
 </Project>
